--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script> -->
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Dark modo Tailwind</title>
 </head>
 <body class="dark:bg-gray-900">
     <div id="modoDark">
@@ -19,7 +19,7 @@
            </div>
             
 
-            <div id="moonIcon" class="iconDark text-yellow-300" >
+            <div id="moonIcon" class="hidden text-yellow-300" >
 
                 <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
